[package]
name = "bili"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
cookie_store = "0.19.0"
qrcode = "0.12.0"
reqwest = { version = "0.11.14", features = ["json", "stream", "blocking", "deflate", "gzip", "rustls-tls-native-roots"] }
reqwest_cookie_store = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
